welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (getDirection() == Direction.EST){
    ^SnakeBuggle:31: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while (!estFaceMur){
  ^SnakeBuggle:34: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (fonctonTest()==false){
  ^